--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.5",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@capacitor/angular": "^1.0.3",
+    "@capacitor/camera": "^1.0.0",
+    "@capacitor/core": "latest",
     "@ionic/angular": "^5.6.8",
+    "@ionic/pwa-elements": "^3.0.2",
+    "firebase": "^8.6.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -51,6 +57,14 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.1.5",
-    "@ionic/angular-toolkit": "latest"
+    "@ionic/angular-toolkit": "latest",
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0",
+    "@capacitor/cli": "latest"
   }
 }
