--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
 				"html/html-extensions": [".html", ".we"] // consider .html and .we files as HTML
 			},
 			"rules": {
+				"prefer-const": "off",
 				"no-useless-escape": "off",
 				"@typescript-eslint/unbound-method": "off",
 				"@typescript-eslint/no-explicit-any": "off",
