--- a/package.json
+++ b/package.json
@@ -1,70 +1,73 @@
 {
-  "name": "twiter-clone",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~11.2.5",
-    "@angular/common": "~11.2.5",
-    "@angular/compiler": "~11.2.5",
-    "@angular/core": "~11.2.5",
-    "@angular/fire": "^6.1.5",
-    "@angular/forms": "~11.2.5",
-    "@angular/platform-browser": "~11.2.5",
-    "@angular/platform-browser-dynamic": "~11.2.5",
-    "@angular/router": "~11.2.5",
-    "@capacitor/angular": "^1.0.3",
-    "@capacitor/camera": "^1.0.0",
-    "@capacitor/core": "latest",
-    "@ionic/angular": "^5.6.8",
-    "@ionic/pwa-elements": "^3.0.2",
-    "firebase": "^8.6.5",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.3",
-    "@angular-eslint/builder": "4.3.0",
-    "@angular-eslint/eslint-plugin": "4.3.0",
-    "@angular-eslint/eslint-plugin-template": "4.3.0",
-    "@angular-eslint/schematics": "4.3.0",
-    "@angular-eslint/template-parser": "4.3.0",
-    "@angular/cli": "~11.2.4",
-    "@angular/compiler-cli": "~11.2.5",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "^2.3.1",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.1.5",
-    "@ionic/angular-toolkit": "latest",
-    "@angular-devkit/architect": ">= 0.900 < 0.1300",
-    "firebase-tools": "^8.0.0 || ^9.0.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0",
-    "@capacitor/cli": "latest"
-  }
+	"name": "twiter-clone",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"deploy:github": "ng deploy --base-href=./ --repo=https://gutembergg.github.io/twitter-clone/ --name=gutembergg --email=46713843+gutembergg@users.noreply.github.com --no-silent",
+		"test": "ng test",
+		"lint": "ng lint",
+		"e2e": "ng e2e"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~11.2.5",
+		"@angular/common": "~11.2.5",
+		"@angular/compiler": "~11.2.5",
+		"@angular/core": "~11.2.5",
+		"@angular/fire": "^6.1.5",
+		"@angular/forms": "~11.2.5",
+		"@angular/platform-browser": "~11.2.5",
+		"@angular/platform-browser-dynamic": "~11.2.5",
+		"@angular/router": "~11.2.5",
+		"@angular/service-worker": "~11.2.5",
+		"@capacitor/angular": "^1.0.3",
+		"@capacitor/camera": "^1.0.0",
+		"@capacitor/core": "latest",
+		"@ionic/angular": "^5.6.8",
+		"@ionic/pwa-elements": "^3.0.2",
+		"firebase": "^8.6.5",
+		"rxjs": "~6.6.0",
+		"tslib": "^2.0.0",
+		"zone.js": "~0.11.3"
+	},
+	"devDependencies": {
+		"@angular-devkit/architect": ">= 0.900 < 0.1300",
+		"@angular-devkit/build-angular": "~0.1102.3",
+		"@angular-eslint/builder": "4.3.0",
+		"@angular-eslint/eslint-plugin": "4.3.0",
+		"@angular-eslint/eslint-plugin-template": "4.3.0",
+		"@angular-eslint/schematics": "4.3.0",
+		"@angular-eslint/template-parser": "4.3.0",
+		"@angular/cli": "~11.2.4",
+		"@angular/compiler-cli": "~11.2.5",
+		"@capacitor/cli": "latest",
+		"@ionic/angular-toolkit": "latest",
+		"@types/jasmine": "~3.6.0",
+		"@types/node": "^12.11.1",
+		"@typescript-eslint/eslint-plugin": "4.16.1",
+		"@typescript-eslint/parser": "4.16.1",
+		"angular-cli-ghpages": "^1.0.0-rc.2",
+		"eslint": "^7.6.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^3.4.0",
+		"firebase-tools": "^8.0.0 || ^9.0.0",
+		"fuzzy": "^0.1.3",
+		"inquirer": "^6.2.2",
+		"inquirer-autocomplete-prompt": "^1.0.1",
+		"jasmine-core": "~3.6.0",
+		"jasmine-spec-reporter": "~5.0.0",
+		"jsonc-parser": "^3.0.0",
+		"karma": "~6.1.0",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-coverage": "~2.0.3",
+		"karma-jasmine": "~4.0.0",
+		"karma-jasmine-html-reporter": "^1.5.0",
+		"open": "^7.0.3",
+		"prettier": "^2.3.1",
+		"protractor": "~7.0.0",
+		"ts-node": "~8.3.0",
+		"typescript": "~4.1.5"
+	}
 }
